--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <!-- <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css"> -->
   <!-- <link rel="stylesheet" href="../node_modules/font-awesome/css/font-awesome.css"> -->
 
-</head>
+<link rel="stylesheet" href="styles.863bb039a027bca6922e.css"></head>
 <body>
   <app-root></app-root>
-<script src="runtime-es2015.js" type="module"></script><script src="runtime-es5.js" nomodule defer></script><script src="polyfills-es5.js" nomodule defer></script><script src="polyfills-es2015.js" type="module"></script><script src="styles-es2015.js" type="module"></script><script src="styles-es5.js" nomodule defer></script><script src="vendor-es2015.js" type="module"></script><script src="vendor-es5.js" nomodule defer></script><script src="main-es2015.js" type="module"></script><script src="main-es5.js" nomodule defer></script></body>
+<script src="runtime-es2015.0811dcefd377500b5b1a.js" type="module"></script><script src="runtime-es5.0811dcefd377500b5b1a.js" nomodule defer></script><script src="polyfills-es5.fd3af48698f9b02947d9.js" nomodule defer></script><script src="polyfills-es2015.442fa3cc45520cc0d518.js" type="module"></script><script src="main-es2015.b8b621d268d8378c88a5.js" type="module"></script><script src="main-es5.b8b621d268d8378c88a5.js" nomodule defer></script></body>
 </html>
